Fix padding causing horizontal scrollbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -201,7 +201,7 @@ ul {
   align-items: center;
   justify-content: center;
   position: absolute;
-  padding: 20% 2.5%;
+  padding: 20% 0;
   top: 40%;
   width: 100%;
   z-index: 1;
